--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ a {
      width:80px;
      float: right;
    }
-   #inicio{
+   #inicioSesion{
      display: none;
      text-align:center;
      margin-top:30px;
